fixing the .gitignore file

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -13,6 +13,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Untitled.ipynb\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "README.md \u001b[1m\u001b[36mnotebooks\u001b[m\u001b[m \u001b[1m\u001b[36msrc\u001b[m\u001b[m\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls ../"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ls: ../data: No such file or directory\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls ../data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
