--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -2,64 +2,163 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import pandas as pd "
+    "import pandas as pd \n",
+    "\n",
+    "df = pd.read_csv('../data/Utuado-Lista_09262017.csv', header=None)\n",
+    "\n",
+    "df.columns = ['first_name', 'last_name', 'town', 'neighborhood', 'data', \n",
+    "               'hour', 'comment', 'volunteer', 'data_source']\n",
+    "\n",
+    "df.head()\n",
+    "\n",
+    "for i in df.columns[2:].tolist():\n",
+    "    df[i] = df[i].shift(-1)\n",
+    "\n",
+    "df['data_source'] = df['data_source'].str.replace('Ponce', 'Utuado')\n",
+    "\n",
+    "df['town'] = df['town'].str.replace('Ponce','Utuado')\n",
+    "\n",
+    "#df.to_csv('utuado_092617.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Untitled.ipynb\r\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>town</th>\n",
+       "      <th>neighborhood</th>\n",
+       "      <th>data</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>comment</th>\n",
+       "      <th>volunteer</th>\n",
+       "      <th>data_source</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Waziel</td>\n",
+       "      <td>Collazo</td>\n",
+       "      <td>Utuado</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>09-26-2017</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Safe - Refugio Feliz Seijo</td>\n",
+       "      <td>F. Agosto</td>\n",
+       "      <td>092617_Utuado_RefugioFelixSeijo_1.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sleiny</td>\n",
+       "      <td>Candelaria</td>\n",
+       "      <td>Utuado</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>09-26-2017</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Safe - Refugio Feliz Seijo</td>\n",
+       "      <td>F. Agosto</td>\n",
+       "      <td>092617_Utuado_RefugioFelixSeijo_1.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Zulgenielis</td>\n",
+       "      <td>Candelaria</td>\n",
+       "      <td>Utuado</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>09-26-2017</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Safe - Refugio Feliz Seijo</td>\n",
+       "      <td>F. Agosto</td>\n",
+       "      <td>092617_Utuado_RefugioFelixSeijo_1.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Keydan</td>\n",
+       "      <td>Candelaria</td>\n",
+       "      <td>Utuado</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>09-26-2017</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Safe - Refugio Feliz Seijo</td>\n",
+       "      <td>F. Agosto</td>\n",
+       "      <td>092617_Utuado_RefugioFelixSeijo_1.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Angel</td>\n",
+       "      <td>Reyes Fradera</td>\n",
+       "      <td>Utuado</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>09-26-2017</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Safe - Refugio Feliz Seijo</td>\n",
+       "      <td>F. Agosto</td>\n",
+       "      <td>092617_Utuado_RefugioFelixSeijo_1.jpg</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    first_name      last_name    town neighborhood        data hour  \\\n",
+       "0       Waziel        Collazo  Utuado          NaN  09-26-2017  NaN   \n",
+       "1       Sleiny     Candelaria  Utuado          NaN  09-26-2017  NaN   \n",
+       "2  Zulgenielis     Candelaria  Utuado          NaN  09-26-2017  NaN   \n",
+       "3       Keydan     Candelaria  Utuado          NaN  09-26-2017  NaN   \n",
+       "4        Angel  Reyes Fradera  Utuado          NaN  09-26-2017  NaN   \n",
+       "\n",
+       "                      comment  volunteer  \\\n",
+       "0  Safe - Refugio Feliz Seijo  F. Agosto   \n",
+       "1  Safe - Refugio Feliz Seijo  F. Agosto   \n",
+       "2  Safe - Refugio Feliz Seijo  F. Agosto   \n",
+       "3  Safe - Refugio Feliz Seijo  F. Agosto   \n",
+       "4  Safe - Refugio Feliz Seijo  F. Agosto   \n",
+       "\n",
+       "                             data_source  \n",
+       "0  092617_Utuado_RefugioFelixSeijo_1.jpg  \n",
+       "1  092617_Utuado_RefugioFelixSeijo_1.jpg  \n",
+       "2  092617_Utuado_RefugioFelixSeijo_1.jpg  \n",
+       "3  092617_Utuado_RefugioFelixSeijo_1.jpg  \n",
+       "4  092617_Utuado_RefugioFelixSeijo_1.jpg  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "!ls "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "README.md \u001b[1m\u001b[36mnotebooks\u001b[m\u001b[m \u001b[1m\u001b[36msrc\u001b[m\u001b[m\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!ls ../"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ls: ../data: No such file or directory\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!ls ../data"
+    "df.head()"
    ]
   },
   {
